+ Add default URL parameters so 'service_type' and 'port' are not required.
* Convert hardcoded SNI setting to command-line argument, so it's easier to toggle (Thanks Carl A.!)
* Turn off logging of request headers during errors and exceptions; we do not want to record any private or sensitive client information.
+ Add documentation and script for upgrading from notary version 2.x to version 3.x.


3.1
---
+ Add support for caching of service data with memcached, memcachier, or redis, to reduce database load.
+ Add metrics tables to allow tracking of useful performance statistics. See doc/metrics.txt for a detailed explanation.
+ Display whether a notary tracks performance metrics on the static index page
+ Add --dburl switch so db connection info can be easily passed all at once
* Fix bug where the notary server would use too many database connections (it now properly closes sessions and connections).
+ Attempt to fail gracefully in the face of catastrophic database errors
	- Attempt to fall back to the cache if we can't get data from the database
	(e.g. if there are too many connections or something went terribly wrong)
	- Fall back to printing and then ignoring metrics if they can't be written to the database
	- Serve a HTTP 503 code if we can't get data, rather than crashing
+ Allow notary public/private keys to be read from environment variables.
	Could be a security trade-off, but makes it easier to run notaries on some distributed systems.
+ Allow notary public/private keys to be exported as heroku config vars.
	Other systems could be supported as needed.
* Fix bug: actually use the webport argument (thanks mwgamera!)


3.0
---
Requires python 2.7.
+ Separate the database interface from the notary code.
    This lets us change the type of database much more easily,
    and gives us a central way to organize other modules that communicate with the database.